2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomReturnType.cs: fixed "Bug 432434 - Code
	completion doesn't work with subclasses".

2008-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs: When creating a new
	configuration, give it a valid path and assembly name. Fixes bug
	#439047 - Cannot create makefiles.

2008-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	Don't crash if the code completion database can't be created. Fixes
	bug #439113 - Exception when trying to close a solution which
	couldn't load all subprojects.

2008-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/Project.cs: Fix bug 431720 - Build failed. XXX is
	a directory.

2008-10-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs:
	* MonoDevelop.Projects.Dom/AbstractMember.cs:
	* MonoDevelop.Projects.Dom/DomMemberDecorator.cs: Fixed accessible
	issue.

2008-10-28  Mike Kestner  <mkestner@novell.com>

	* MonoDevelop.Projects.Formats.MD1/MD1DotNetProjectHandler.cs:
	add compile warnings when assembly reference versions are "upgraded"
	to newer versions because the requested versions are not installed.

2008-10-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/Solution.cs:
	* MonoDevelop.Projects/IBuildTarget.cs: Implemented CanExecute.

2008-10-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/SolutionFolder.cs: In GetBuildableEntries,
	include entries belonging to other solution folders, if
	includeExternalReferences is specified. Fixes bug 389127 - Solution
	doesn't build while all their projects build.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs: don't show members for
	"System.Void".

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/IMethod.cs:
	* MonoDevelop.Projects.Dom/DomType.cs: